# compar-vectorizer

./: Cargo.toml  jacobi_ast  jacobi_trace  out_deps.dot
src/: lib.rs  main.rs
src/codegen/: mod.rs
src/dependencies/: deps.rs  graph.rs  mod.rs  trace_parser.rs
src/depfinder/: mod.rs  trace_deps.rs  trace_parser.rs
src/ir/: mod.rs  parse.rs
src/vectorization/: graph.rs  ir_parse.rs  mod.rs  trace_deps.rs  trace_parser.rs
