[package]
name = "vectorizer"
version = "0.1.0"
authors = ["Michael Pucher <michael.pucher.main@gmail.com>"]

[lib]
name = "vectorizer"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false

[dependencies]
nom = "4.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
petgraph = { version = "0.4.12", features = ["serde-1"] }